# dali-adaptor

./: .gitignore  CMakeLists.txt  README  README.md  dali-adaptor.manifest  groups  project.config
adaptors/base/: conditional-wait.cpp  conditional-wait.h  core-event-interface.h  display-connection.cpp  display-connection.h  environment-options.cpp  environment-options.h  environment-variables.h  file.list  fps-tracker.cpp  fps-tracker.h  frame-time.cpp  frame-time.h  lifecycle-observer.h  log-options.cpp  log-options.h  render-helper.cpp  render-helper.h  render-thread.cpp  render-thread.h  thread-controller-interface.h  thread-controller.cpp  thread-controller.h  thread-synchronization-debug.h  thread-synchronization.cpp  thread-synchronization.h  threading-mode.h  time-service.cpp  time-service.h  update-render-controller.cpp  update-render-controller.h  update-render-synchronization.cpp  update-render-synchronization.h  update-status-logger.cpp  update-thread.cpp  update-thread.h  vsync-notifier.cpp  vsync-notifier.h
adaptors/common/: abort-handler.cpp  abort-handler.h  accessibility-adaptor-impl.cpp  accessibility-adaptor-impl.h  accessibility-gesture-detector.cpp  accessibility-manager-impl.h  accessibility-manager.cpp  adaptor-impl.cpp  adaptor-impl.h  adaptor.cpp  adaptor.h  application-impl.cpp  application-impl.h  bitmap-loader-impl.cpp  bitmap-loader-impl.h  callback-manager.h  clipboard-event-notifier-impl.cpp  clipboard-event-notifier-impl.h  clipboard-event-notifier.cpp  clipboard-impl.h  color-controller-impl.cpp  color-controller-impl.h  color-controller.cpp  command-line-options.cpp  command-line-options.h  dali-adaptor-version.cpp  damage-observer.h  device-layout.cpp  drag-and-drop-detector-impl.cpp  drag-and-drop-detector-impl.h  ecore-callback-manager.cpp  event-feeder.cpp  (+83 more)
automated-tests/: .gitignore  .gitignore-with-autogenerated-files  .gitignore-without-autogenerated-files  CMakeLists.txt  CMakeLists.txt.in  README.md  build.sh  coverage.sh  execute.sh  execute_target.sh  rules.mk.in  tet_scen
automated-tests/src/dali-adaptor/: CMakeLists.txt  tct-dali-adaptor-core.cpp  tct-dali-adaptor-core.h  utc-Dali-Accessibility.cpp  utc-Dali-Application.cpp  utc-Dali-BitmapLoader.cpp  utc-Dali-Capture.cpp  utc-Dali-ClipboardData.cpp  utc-Dali-EncodedImageBuffer.cpp  utc-Dali-FileLoader.cpp  utc-Dali-GifLoading.cpp  utc-Dali-Gl-Window.cpp  utc-Dali-ImageLoading.cpp  utc-Dali-Key.cpp  utc-Dali-KeyGrab.cpp  utc-Dali-Keyboard.cpp  utc-Dali-MouseInOutEvent.cpp  utc-Dali-NativeImage.cpp  utc-Dali-NativeImageSource.cpp  utc-Dali-PixelBuffer.cpp  utc-Dali-SingletonService.cpp  utc-Dali-TextScript.cpp  utc-Dali-Timer.cpp  utc-Dali-TtsPlayer.cpp  utc-Dali-UiContext.cpp  utc-Dali-Watch-Time.cpp  utc-Dali-Watch.cpp  utc-Dali-Widget.cpp  utc-Dali-WidgetApplication.cpp  utc-Dali-Window.cpp  utc-Dali-WindowData.cpp  utc-Dali-WindowSystem.cpp
automated-tests/src/dali-adaptor-internal/: CMakeLists.txt  image-loaders.cpp  image-loaders.h  tct-dali-adaptor-internal-core.cpp  tct-dali-adaptor-internal-core.h  utc-ConditionalWait.cpp  utc-Dali-AddOns.cpp  utc-Dali-BmpLoader.cpp  utc-Dali-CommandLineOptions.cpp  utc-Dali-CompressedTextures.cpp  utc-Dali-FontClient.cpp  utc-Dali-GifLoader.cpp  utc-Dali-GlImplementation.cpp  utc-Dali-IcoLoader.cpp  utc-Dali-ImageOperations.cpp  utc-Dali-Internal-PixelBuffer.cpp  utc-Dali-LRUCacheContainer.cpp  utc-Dali-Lifecycle-Controller.cpp  utc-Dali-TiltSensor.cpp  utc-Dali-WbmpLoader.cpp
automated-tests/src/dali-adaptor-internal/addons/: test-sample-addon.cpp
automated-tests/src/dali-adaptor/dali-test-suite-utils/: adaptor-environment-variable.cpp  adaptor-environment-variable.h  adaptor-test-adaptor-impl.cpp  adaptor-test-adaptor-impl.h  adaptor-test-application.h  dali-test-img-utils.h  dali-test-suite-utils.cpp  dali-test-suite-utils.h  test-actor-utils.cpp  test-actor-utils.h  test-application.cpp  test-application.h  test-gesture-manager.h  test-gl-abstraction.h  test-gl-sync-abstraction.h  test-graphics-application.cpp  test-graphics-application.h  test-graphics-buffer.cpp  test-graphics-command-buffer.h  test-graphics-controller.cpp  test-graphics-controller.h  test-graphics-egl-application.cpp  test-graphics-egl-application.h  test-graphics-pipeline.h  test-graphics-program.cpp  test-graphics-vk-application.cpp  test-graphics-vk-application.h  test-native-image.cpp  test-native-image.h  test-platform-abstraction.cpp  test-platform-abstraction.h  test-render-controller.h  test-render-surface.cpp  test-render-surface.h  test-trace-call-stack.h  test-vk-abstraction.cpp  test-vk-abstraction.h
automated-tests/src/dali-graphics/: CMakeLists.txt  tct-dali-graphics-core.cpp  utc-Dali-GlImplementation.cpp  utc-Dali-GlesImplementation.cpp  utc-Dali-GraphicsBuffer.cpp  utc-Dali-GraphicsDraw.cpp  utc-Dali-GraphicsFramebuffer.cpp  utc-Dali-GraphicsGeometry.cpp  utc-Dali-GraphicsNativeImage.cpp  utc-Dali-GraphicsProgram.cpp  utc-Dali-GraphicsSampler.cpp  utc-Dali-GraphicsShader.cpp  utc-Dali-GraphicsTexture.cpp
automated-tests/src/dali-platform-abstraction/: CMakeLists.txt  resource-collector.cpp  resource-collector.h  tct-dali-platform-abstraction-core.cpp  tct-dali-platform-abstraction-core.h  utc-image-fitting-modes.cpp  utc-image-loading-cancel-all-loads.cpp  utc-image-loading-cancel-some-loads.cpp  utc-image-loading-common.cpp  utc-image-loading-common.h  utc-image-loading-load-completion.cpp  utc-image-loading.cpp
automated-tests/src/dali-vk-graphics/: CMakeLists.txt  tct-dali-vk-graphics-core.cpp  utc-Dali-VkClipMatrix.cpp  utc-Dali-VkGraphicsBuffer.cpp  utc-Dali-VkReflection.cpp
capi/: dali-adaptor-doc.h
dali/: dali.h  file.list
doc/: dali-adaptor-doc.h  file.list
packaging/: dali-adaptor-common.spec  dali-adaptor-mobile.spec  dali-adaptor-tv.spec  dali-adaptor-wearable.spec  dali-adaptor.spec  dali-adaptor.spec-common  dali-adaptor.spec-mobile  dali-adaptor.spec-tv
plugins/: dali-feedback.cpp  dali-feedback.h  file.list  tizen-web-engine-lite.cpp  tizen-web-engine-lite.h
text/: file.list
text-abstraction/: file.list
(+3388 files in other folders)
